--- a/app.css
+++ b/app.css
@@ -16,7 +16,6 @@ header {
   padding-left: 20px;
 }
 
-
 .menu {
   position: absolute;
   width: 300px;
@@ -81,32 +80,33 @@ header {
 	transition: transform 1s ease-out;
 }
 
-#info {
-	position: absolute;
-	text-decoration: underline;
-	text-align: right;
-	top: 160px;
-}
-
 #map {
 	padding-top: 50px;
 	height: 650px;
 }
 
 .gm-style .gm-style-iw {
-    background-color: #7D7D7F !important;
+	background-color: #7D7D7F !important;
     border: 2px solid #43AA8B;
     top: 0 !important;
     left: 0 !important;
     width: 100% !important;
     height: 100% !important;
     min-height: 150px !important;
-    min-width: 200px !important;
+    min-width: 250px !important;
     color: #fff;
     padding: 10px 10px 0 10px;
     display: block !important;
     z-index: 100;
+    margin-right: 20px;
  }   
+
+.gm-style .gm-style-iw img {
+	width: 100px;
+	height: 80px;
+	margin-top: -70px;
+	margin-left: 70px;
+}
 
 /*style the arrow*/
 .gm-style div div div div div div div div {
