--- a/src/css/app.css
+++ b/src/css/app.css
@@ -1,5 +1,6 @@
-html, body {
-	font-family: 'Indie Flower', cursive;
+html, 
+body {
+	font-family: "Indie Flower", cursive;
 	height: 100%;
 	margin: 0;
 	padding: 0;
@@ -83,6 +84,16 @@ header {
 #map {
 	padding-top: 50px;
 	height: 650px;
+}
+
+.map-error {
+  max-width: 100%;
+  position: fixed;
+  bottom: 0;
+  right: 0;
+  background: #f7f7f7;
+  color:#254441;
+
 }
 
 .gm-style .gm-style-iw {
