--- a/src/css/app.css
+++ b/src/css/app.css
@@ -37,12 +37,12 @@ header {
 #search {
 	position: absolute;
 	padding: 0 11px 0 13px;
-    text-overflow: ellipsis;
-    width: 200px;
-    margin: 10px 0 0 20px;
-    height: 25px;
-    font-size: 15px;
-    outline: none;
+  text-overflow: ellipsis;
+  width: 200px;
+  margin: 10px 0 0 20px;
+  height: 25px;
+  font-size: 15px;
+  outline: none;
 }
 
 .glyphicon-remove {
@@ -92,8 +92,11 @@ header {
   bottom: 0;
   right: 0;
   background: #f7f7f7;
-  color:#254441;
-
+  color: #333;
+  padding: 40px;
+  text-shadow: 2px 2px yellow;
+  font-size: 25px;
+  display: none;
 }
 
 .gm-style .gm-style-iw {
